# GDPR-CCPA-Compilance-Checker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  BUG_FIXES.md  CHANGELOG.md  CLAUDE.md  CODE_IMPROVEMENTS.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPROVED_APP_STRUCTURE.py  IMPROVEMENTS_SUMMARY.md  LATEST_UPDATE.md  LESSONS.md  PRODUCTION_READINESS.md  README.md  UI_REDESIGN.md  app.py  app_old.py  config.py  constants.py  docker-compose.yml  exceptions.py  logger_config.py  pyproject.toml  replit.md  requirements.txt  start.sh  utils.py  validators.py  vercel.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app_pages/: __init__.py  batch_scan.py  dashboard.py  history.py  quick_scan.py
attached_assets/: Pasted-Perfect-let-s-break-your-GDPR-CCPA-Compliance-Checker-into-the-Model-View-Controller-MVC--1762556126808_1762556126808.txt
components/: __init__.py  batch_progress.py  comparison_tool.py  export_panel.py  header.py  results_display.py  scan_form.py
controllers/: compliance_controller.py
database/: db.py  models.py  operations.py
libs/: __init__.py  cache.py  export.py  formatters.py  progress.py  rate_limit.py  validators.py
models/: compliance_model.py
pages/: batch_scan.py  dashboard.py  history.py  quick_scan.py  settings.py
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: openai_service.py
tests/: test_bug_fixes.py  test_cache.py  test_compliance_controller_batch.py  test_export.py  test_openai_service.py  test_scoring_and_trackers.py  test_ssrf_protection.py  (+3 more)
(+1 files in other folders)
