[project]
name = "gdpr-ccpa-compliance-checker"
version = "0.1.0"
description = "GDPR/CCPA Compliance Checker"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "openai>=2.7.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
