[tool.poetry]
package-mode = false
name = "gdpr-ccpa-compliance-checker"
version = "0.1.0"
description = "GDPR/CCPA Compliance Checker"
authors = [""]

[tool.poetry.dependencies]
python = ">=3.10"
beautifulsoup4 = ">=4.14.2"
lxml = ">=6.0.2"
openai = ">=2.7.1"
psycopg2-binary = ">=2.9.11"
requests = ">=2.32.5"
sqlalchemy = ">=2.0.44"
streamlit = ">=1.50.0"
trafilatura = ">=2.0.0"
pandas = ">=2.0.0"
pypdf = ">=5.0.0"
fpdf2 = ">=2.7.0"
reportlab = ">=4.0.0"
aiohttp = ">=3.9.0"
cachetools = ">=5.3.0"
plotly = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
